# deploy-ml-model-fastapi-heroku

./: .gitignore  README.md  dvc.yaml  evaluate.py  main.py  model_card.md  prepare.py  pyproject.toml  requirements.txt  segregate.py  setup.cfg  train.py  validate_heroku_app.py
.dvc/: config
.github/workflows/: liting-test.yml
data/: .gitignore  census.csv.dvc
linting/: lint.sh
model/: .gitignore  global_metricts.json
scripts/: prepare.py
src/: __init__.py
src/config/: global.yaml
src/ml/: data.py  model.py
src/schemas/: __init__.py  census.py  inference.py
src/settings/: __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_evaluate_stage.py  test_module.py  test_prepare_stage.py  test_segregate_stage.py  test_train_stage.py
