[tool.poetry]
name = "classification-census-bureau"
version = "0.1.0"
description = "classification model on publicly available Census Bureau data."
authors = ["Heber Trujillo <heber.trj.urt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.2"
scikit-learn = "^1.0.2"
pytest = "^7.1.1"
requests = "^2.27.1"
fastapi = "0.63.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
toml = "^0.10.2"
dvc = {extras = ["s3"], version = "^2.10.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
